# ztn

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  dependency-review.yml
apps/api/: main.py
apps/api/core/: __init__.py  dependencies.py  logging_config.py
apps/config/: __init__.py  settings.py
apps/worker/: main.py  tasks.py
docs/architecture/: c4-diagrams.md  clean-architecture.md  er-diagram.md  implementation-notes.md  overview.md
docs/architecture/api/: openapi.yaml
scripts/deployment/: prometheus.yml
scripts/deployment/grafana-dashboards/: dashboards.yml
scripts/migration/: init.sql
src/application/dto/: access_dto.py  auth_dto.py  user_dto.py
src/application/use_cases/: authenticate_user.py  request_access.py
src/domain/entities/: access_request.py  device.py  user.py
src/domain/repositories/: access_request_repository.py  device_repository.py  user_repository.py
src/domain/services/: authentication_service.py  authorization_service.py
src/domain/value_objects/: user_role.py  user_status.py
src/infrastructure/persistence/postgresql/: database.py  user_repository_impl.py
src/infrastructure/persistence/postgresql/models/: user_model.py
src/infrastructure/persistence/redis/: __init__.py  cache_repository.py  redis_client.py
tests/: conftest.py
tests/integration/: test_auth_endpoint.py
tests/unit/: test_device_entity.py  test_user_entity.py
